--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -6,9 +6,20 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
 input, button {
   outline: none;
   border: 0;
+}
+
+
+.header-logo {
+  color: #5cb85c;
+  font-size: 24px;
+  font-weight: bold;
 }
 
 .form-control {
@@ -19,4 +30,18 @@ input, button {
 
 .pointer {
   cursor: pointer;
+}
+
+.container {
+  width: 1200px;
+  max-width: 100%;
+  margin-inline: auto;
+}
+
+.ml-13 {
+  margin-left: 13px;
+}
+
+.mr-13 {
+  margin-right: 13px;
 }
